--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
@@ -19,43 +20,78 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
+  <div class="container-fluid">
     <!-- Timeblocks go here -->
 
-    <div class="row">
-      <div class="col-2">9AM</div>
-      <div id="9"></div>
+      <div class="row" id="nineAM">
+        <div class="col hour">9AM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">10AM</div>
-      <div id="10"></div>
+      <div class="row 10am">
+        <div class="col hour">10AM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">11AM</div>
-      <div id="11"></div>
+      <div class="row 11am">
+        <div class="col hour">11AM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">12PM</div>
-      <div id="12"></div>
+      <div class="row 12pm">
+        <div class="col hour">12PM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">1PM</div>
-      <div id="1"></div>
+      <div class="row 1pm">
+        <div class="col hour">1PM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">2PM</div>
-      <div id="2"></div>
+      <div class="row 2pm">
+        <div class="col hour">2PM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">3PM</div>
-      <div id="3"></div>
+      <div class="row 3pm">
+        <div class="col hour">3PM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">4PM</div>
-      <div id="4"></div>
+      <div class="row 4pm">
+        <div class="col hour">4PM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-      <div class="col-2">5PM</div>
-      <div id="5"></div>
+      <div class="row 5pm">
+        <div class="col hour">5PM</div>
+        <div class="col events">Events</div>
+        <div class="col save">Save</div>
+      </div>
 
-    </div>
 
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
   <!-- <script src="moment.js"></script> -->
   <script src="./app.js"></script>
 </body>
