--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -20,62 +20,62 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container-fluid">
+  <div class="container-fluid" id="planner-body">
     <!-- Timeblocks go here -->
 
-      <div class="row" id="nineAM">
-        <div class="col hour">9AM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
+      <div class="row">
+        <div class="col-md-2 time-block">Time</div>
+        <div class="col-md-8 description">Description</div>
+        <div class="col-md-2 save-btn">Save</div>
       </div>
 
-      <div class="row 10am">
-        <div class="col hour">10AM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
+      <!-- <div class="row">
+        <div class="col">10AM</div>
+        <div class="col" id="tenAM">Events</div>
+        <div class="col">Save</div>
       </div>
 
-      <div class="row 11am">
-        <div class="col hour">11AM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
+      <div class="row">
+        <div class="col">11AM</div>
+        <div class="col" id="elevenAM">Events</div>
+        <div class="col">Save</div>
       </div>
 
       <div class="row 12pm">
-        <div class="col hour">12PM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
+        <div class="col">12PM</div>
+        <div class="col" id="twelvePM">Events</div>
+        <div class="col">Save</div>
       </div>
 
       <div class="row 1pm">
-        <div class="col hour">1PM</div>
-        <div class="col events">Events</div>
+        <div class="col">1PM</div>
+        <div class="col" id="onePM">Events</div>
+        <div class="col">Save</div>
+      </div>
+
+      <div class="row twoPM">
+        <div class="col">2PM</div>
+        <div class="col" id="twoPM">Events</div>
+        <div class="col">Save</div>
+      </div>
+
+      <div class="row">
+        <div class="col">3PM</div>
+        <div class="col" id="threePM">Events</div>
+        <div class="col">Save</div>
+      </div>
+
+      <div class="row">
+        <div class="col">4PM</div>
+        <div class="col" id="fourPM">Events</div>
         <div class="col save">Save</div>
       </div>
 
-      <div class="row 2pm">
-        <div class="col hour">2PM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
-      </div>
-
-      <div class="row 3pm">
-        <div class="col hour">3PM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
-      </div>
-
-      <div class="row 4pm">
-        <div class="col hour">4PM</div>
-        <div class="col events">Events</div>
-        <div class="col save">Save</div>
-      </div>
-
-      <div class="row 5pm">
+      <div class="row">
         <div class="col hour">5PM</div>
-        <div class="col events">Events</div>
+        <div class="col events" id="fivePM">Events</div>
         <div class="col save">Save</div>
-      </div>
+      </div> -->
 
 
   </div>
