script.js: Added form tags with labels and inputs to input information for each hour.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -22,7 +22,7 @@
   </header>
   <div class="container-fluid" id="planner-body">
   
-      <!-- Template row -->
+      <!-- Template rows -->
       <div class="row">
         <div class="col-md-2 time-block">Time</div>
         <div class="col-md-8 description past">Description
