Created event listeners for the save button to store the relative description of each hour

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,15 +23,17 @@
   <div class="container-fluid" id="planner-body">
   
       <!-- Template rows -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-2 time-block">Time</div>
-        <div class="col-md-8 description past">Description
-          <!-- <form method="POST">
+        <div class="col-md-8 description past">
+          <form id="hour-time-form" method="POST">
             <label for="time-event">Description</label>
-            <input type="text" name="time-specifics" id="time-specifics" placeholder="Click here to add an event">
-          </form> -->
+            <textarea id="hour-time-specifics", name="hour-time-specifics"></textarea>
+          </form>
         </div>
-        <div class="col-md-2 save-btn">Save</div>
+        <div class="col-md-2 save-btn">Save
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </div>
       </div>
 
       <div class="row">
@@ -44,7 +46,7 @@
         <div class="col-md-2 time-block">Time</div>
         <div class="col-md-8 description future">Description</div>
         <div class="col-md-2 save-btn">Save</div>
-      </div>
+      </div> -->
 
   </div>
 
